# dockerlogs

./: Cargo.toml  build.rs
.claude/: settings.local.json
.github/workflows/: build.yml  release.yaml  update-version.yml
scripts/: release.sh
src/: main.rs  tui.rs
