[package]
name = "dockerlogs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
colored = "2.0.0"
crossterm = "0.27"
docker-api = "0.14"
futures = "0.3.21"
ratatui = "0.29"
regex = "1.6.0"
tokio = { version = "1", features = ["macros", "io-util", "rt-multi-thread", "sync"] }
